package ejerciciosexcepciones2;

public class NotaMal extends Exception{

    public NotaMal(String message) {
        super(message);
    }
}
