package ejerciciosexcepciones2;

public class SoloAceptoS extends Exception{

    public SoloAceptoS(String message) {
        super(message);
    }
    
}
